# battle-bots

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure  configure.sh  libtd  play  run_tests  run_tests.sh  sorter.c
native/: Makefile  TurnBased.cpp  gui.cpp  tbtg.cpp  td.cpp  world.cpp  yay.cpp  yay2.cpp
native/graphics/: gui.cpp
native/shared/: coordinate.hpp  level.hpp  path_creator.cpp  path_creator.h  path_creator.hpp  player.hpp  sizes.h  sprite.cpp  sprite.hpp  spritesheet.cpp  spritesheet.hpp  tdmap.cpp  tdmap.hpp  tower.cpp  tower.hpp
python/: play.py  safe_eval.py  td.py  test.py  ui.py
python/static/: player.js  rps.js
python/templates/: how_many_players.html  rps.html  rps_ui.html  td.html  td_ui.html
tests/: config_tests.py  constructor_test.py  link_tester.py  test_libtbtg.py
